--- a/_includes/assets/custom.scss
+++ b/_includes/assets/custom.scss
@@ -19,3 +19,15 @@
 	background: #271d6b;
 	z-index: 200
 }
+
+.wy-nav-top {
+    display: none;
+    background: #271d6b;
+    color: #fff;
+    padding: .4045em .809em;
+    position: relative;
+    line-height: 50px;
+    text-align: center;
+    font-size: 100%;
+    *zoom: 1;
+}
